--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+    <script src="script.js"></script>
     <title>Assignment #2</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar">
         <ul>
             <li><img src="assets/icon.png" alt="my logo" height="50px" width="auto"></li>
 
@@ -16,8 +17,27 @@
             <li class="hideOnMobile"><a href="https://johnrxyz.github.io/PERSONAL-PORTFOLIO/" target="_blank">ABOUT</a></li>
             <li class="hideOnMobile"><a href="https://johnrxyz.github.io/RESPONSIVE-WEBPAGE/" target="_blank">PROJECTS</a></li>
             
-            <li class="menu-button"><a href="#"><span class="material-symbols-outlined"> menu</span></a></li>
+            <li class="menu-button" onclick=showSidebar()><a href="#"><span class="material-symbols-outlined"> menu</span></a></li>
         </ul>
+
+        <ul class="sidebar">
+            <li onclick=hideSidebar()><a href="#" style="font-size: 2rem; justify-content: flex-end; width: 200%; padding-top: 20px;">x</a></li>
+            <li><a href="index.html" style="font-size: 2rem;">HOME</a></li>
+            <li><a href="https://johnrxyz.github.io/PERSONAL-PORTFOLIO/" target="_blank" style="font-size: 2rem;">ABOUT</a></li>
+            <li><a href="https://johnrxyz.github.io/RESPONSIVE-WEBPAGE/" target="_blank" style="font-size: 2rem;">PROJECTS</a></li>
+        </ul>
+    
+        <script>
+            function showSidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'flex'
+            }
+
+            function hideSidebar(){
+                const sidebar = document.querySelector('.sidebar')
+                sidebar.style.display = 'none'
+            }
+        </script>
     </nav>
     <main>
         <div class="cardContainer">
@@ -52,7 +72,7 @@
 
                 <div class="desHolder">
                     <h1>I like her</h1>
-                    <p><i style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;">No description</i></p>
+                    <p><i style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;">No description</i> [I'm speechless]</p>
                 </div>
             </div>
         </div>
