--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="cardContainer">
             <div class="card">
                 <div class="imgHolder">
-                    <img src="assets/motorcycle.png" alt="a picture of me" class="cardImg">
+                    <img src="assets/motorcycle.jpg" alt="a picture of me" class="cardImg">
                 </div>
 
                 <div class="desHolder">
